--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,8 @@ MONGODB_URL = "mongodb+srv://anisurrohman27777:yVEH846hreDgxj7X@cluster0.e5uwvyf
 JWT_SECRET = "EWQS25554cfdXHWSJW4Y53"
 ADMIN_EMAIL = "admin@onecart.com"
 ADMIN_PASSWORD = "admin1234567"
-CLOUDINARY_NAME = "donje3jyi"
-CLOUDINARY_API_KEY = "513539125669253"
-CLOUDINARY_API_SECRET = "BiWQPNRlz9ytr8hf1uxOkpTslqM"
+CLOUDINARY_NAME = "dogbf6yo4"
+CLOUDINARY_API_KEY = "494225993819389"
+CLOUDINARY_API_SECRET = "FMtB-SVJUbTWGbkGL77-FizStPA"
 RAZORPAY_KEY_SECRET = 'xcSO3g9QGyhafgi99hKaRCqh'
 RAZORPAY_KEY_ID = 'rzp_test_T0tkeA2VUAF1mS'
